novas imagens e modelo da tabela

--- a/Trabalho/src/tela/Simulacao.form
+++ b/Trabalho/src/tela/Simulacao.form
@@ -118,6 +118,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Simular"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jB_simularActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jB_finalizar">
       <Properties>
@@ -126,6 +129,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Finalizar simula&#xe7;&#xe3;o"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jB_finalizarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
