--- a/Trabalho/src/telas/TelaInicial.form
+++ b/Trabalho/src/telas/TelaInicial.form
@@ -7,6 +7,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -33,7 +36,7 @@
               <Component id="jRadio_semafaro" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jRadio_monitores" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
           </Group>
           <Component id="jb_mapa2" alignment="1" pref="450" max="32767" attributes="0"/>
           <Component id="jb_mapa1" alignment="0" max="32767" attributes="0"/>
@@ -47,7 +50,7 @@
                   <Component id="jRadio_monitores" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jRadio_semafaro" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="18" max="32767" attributes="0"/>
+              <EmptySpace pref="10" max="32767" attributes="0"/>
               <Component id="jb_mapa1" min="-2" pref="82" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jb_mapa2" min="-2" pref="82" max="-2" attributes="0"/>
@@ -102,6 +105,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="jRadio_semafaro">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="18" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Sem&#xe1;faro"/>
       </Properties>
       <Events>
@@ -110,6 +116,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="jRadio_monitores">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="18" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Monitor"/>
       </Properties>
     </Component>
